discussion/kv_engine/141636/141636_rev45_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-10 05:26:02.000000000
Message: 
Uploaded patch set 45: New patch set was added with same tree, parent, and commit message as Patch Set 44.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 06:43:27.000000000
Message: 
Patch Set 45:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36670/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0053/0096]: test partial rollback on consumer...(33 ms) SKIPPED_UNDER_MAGMA


99% tests passed, 2 tests failed out of 407

Total Test time (real) = 626.58 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36670/ )

Timeout of a CTest test 367/407 Test #286: ep_testsuite_xdcr.ephemeral.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36670/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9708/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9708/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9708/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8304/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/243/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31342/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10356/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11431/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11702/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11283/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19287/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
